fix: poster alignment: Sandeep

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -37888,6 +37888,6 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
 
 .update-btn{
   position: relative;
-    right: 385px;
+    right: 440px;
     bottom: 20px;
 }
